# sports-prediction

./: .gitignore  README.md  SESSION_SUMMARY_2026-02-01.md  main.py  pyproject.toml
docs/: API_LIMITATIONS.md  API_SETUP_GUIDE.md  EXTENSIBILITY.md  IMPLEMENTATION_PLAN.md  INITIATIVE_AND_INTEGRATION.md  SOLUTION_DESIGN.md  TASKS.md
examples/: ao2026_final_prediction.py  ao2026_ml_prediction.py
scripts/: build_real_training_data.py  collect_historical_data.py  fetch_real_h2h.py  search_all_h2h.py  train_models.py
src/sports_prediction/core/: database.py  models.py
src/sports_prediction/data/: api_client.py
src/sports_prediction/sports/tennis/: features.py  fetcher.py  ml_predictor.py
src/sports_prediction/sports/tennis/models/: logistic_regression.joblib  random_forest.joblib  xgboost.joblib
tests/core/: test_database.py  test_models.py
tests/data/: test_api_client.py
tests/sports/tennis/: test_features.py  test_fetcher.py
