[project]
name = "sports-prediction"
version = "0.1.0"
description = "General sports prediction framework with confidence scoring and transparent reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
